--- a/themes/typo/layouts/_default/baseof.html
+++ b/themes/typo/layouts/_default/baseof.html
@@ -6,14 +6,7 @@
     {{ partial "head.html" . }}
   </head>
 
-  {{ $theme := "auto"}}
-
-  {{ with .Param "theme" }}
-  {{ $theme = .}}
-  {{ end }}
-
-  <body class="{{ $theme }}">
-
+  <body>
     <div class="content">
       <header>
         {{ partial "header.html" . }}
@@ -29,38 +22,4 @@
     </footer>
 
   </body>
-
-  <script>
-
-  function isAuto() {
-    return document.body.classList.contains("auto");
-  }
-
-  function setTheme() {
-    if (!isAuto()) {
-      return
-    }
-
-    document.body.classList.remove("auto");
-    let cls = "light";
-    if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-      cls = "dark";
-    }
-
-    document.body.classList.add(cls);
-  }
-
-  function invertBody() {
-    document.body.classList.toggle("dark");
-    document.body.classList.toggle("light");
-  }
-
-  if (isAuto()) {
-    window.matchMedia('(prefers-color-scheme: dark)').addListener(invertBody);
-  }
-
-  setTheme();
-
-</script>
-
 </html>
