--- a/themes/typo/layouts/partials/head/css.html
+++ b/themes/typo/layouts/partials/head/css.html
@@ -7,15 +7,8 @@ $CSS := slice
 (resources.Get "css/main.css")
 (resources.Get "css/custom.css")
 (resources.Get "css/chroma.css")
-(resources.Get "css/colors/default.css")
+(resources.Get "css/colors/catpuccin.css")
 }}
-
-{{ with .Site.Params.colorPalette }}
-
-{{ $path := printf "css/colors/%s.css" . }}
-{{ $CSS = $CSS | append (resources.Get $path)}}
-
-{{ end }}
 
 {{
 $combined := $CSS
