--- a/themes/typo/layouts/_default/home.html
+++ b/themes/typo/layouts/_default/home.html
@@ -11,7 +11,7 @@
     {{ end }}
 
     {{ with .Site.Params.homeIntroContent }}
-    <p>{{ . | markdownify }}</p>
+    <p>{{ . | safeHTML }}</p>
     {{ end }}
 </div>
 {{ end }}
